// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchKmsCryptoKeys should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:43.324630550Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343324,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "location": "global",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-topic-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/global/example-topic-keyring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.998855757Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342998,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/example-keyring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:43.452796640Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343452,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.750605992Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342750,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-disk-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.389137569Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342389,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "location": "us-central1",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:54.427526595Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
            "primary": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:54.427526595Z",
              "generateTime": "2021-05-31T16:25:54.427526595Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354427,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478354427,
      "primaryGenerateTime": 1622478354427,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/global/example-topic-keyring/projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:53.130589171Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
            "primary": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2022-04-11T16:16:58.322384547Z",
              "generateTime": "2022-04-11T16:16:58.322384547Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/2",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478353130,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1649693818322,
      "primaryGenerateTime": 1649693818322,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/2",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/example-keyring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:54.506981906Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
            "nextRotationTime": "2022-06-13T16:32:50.938207Z",
            "primary": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2022-06-12T16:32:49.938207500Z",
              "generateTime": "2022-06-12T16:32:49.938207500Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/378",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354506,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "nextRotationTime": 1655137970938,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1655051569938,
      "primaryGenerateTime": 1655051569938,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/378",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:52.740906673Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
            "nextRotationTime": "2022-06-13T16:32:49.079723Z",
            "primary": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2022-06-12T16:32:48.079723603Z",
              "generateTime": "2022-06-12T16:32:48.079723603Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/378",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478352740,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "nextRotationTime": 1655137969079,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1655051568079,
      "primaryGenerateTime": 1655051568079,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/378",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:43.794005568Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
            "nextRotationTime": "2022-06-13T16:32:40.128512Z",
            "primary": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2022-06-12T16:32:39.128512749Z",
              "generateTime": "2022-06-12T16:32:39.128512749Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/378",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478343794,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "nextRotationTime": 1655137960128,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1655051559128,
      "primaryGenerateTime": 1655051559128,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/378",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring|has|projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring|has|projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_kms_key_ring",
    "google_kms_crypto_key",
    "google_kms_key_ring_has_crypto_key",
  ],
  "numCollectedEntities": 10,
  "numCollectedRelationships": 5,
}
`;

exports[`#fetchKmsKeyRings should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:43.324630550Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343324,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "location": "global",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-topic-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/global/example-topic-keyring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.998855757Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342998,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/example-keyring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:43.452796640Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343452,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.750605992Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342750,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-disk-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:42.389137569Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342389,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "location": "us-central1",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/key?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "google_kms_key_ring",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 0,
}
`;
